# Align-STM32G4

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake
g4-test/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  stm32g431cbtx_FLASH.ld
g4-test/Startup/: startup_stm32g431cbtx.s
g4-test/cmake/: vscode_generated.cmake
inc/: align.hpp  align_config.hpp  stm32g4xx_hal_conf.h
src/: align.cpp
